tests/fixtures/errors/print_record.z
point: record {
    x: i64
}

main: function is {
    p: point x: 1
    print p
}
